# student-record-system-by-c-

project/: CMakeLists.txt  course.cpp  course.h  coursemark.cpp  coursemark.h  grade.cpp  grade.h  gradedweighted.cpp  gradedweighted.h  honorstudent.cpp  honorstudent.h  internationalstudent.cpp  internationalstudent.h  main 1.cpp  statestudent.cpp  statestudent.h  student.cpp  student.h
