cmake_minimum_required(VERSION 3.25)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled student.cpp student.h course.cpp course.h grade.cpp grade.h cmake-build-debug/semester.cpp cmake-build-debug/semester.h internationalstudent.cpp internationalstudent.h honorstudent.cpp honorstudent.h gradedweighted.cpp gradedweighted.h statestudent.cpp statestudent.h coursemark.cpp coursemark.h "main 1.cpp" .idea/kj.cpp)
